# printer-scanner

./: .gitignore  Cargo.toml  README.md
src/: cache.rs  identifier.rs  main.rs  printer.rs  printing.rs  scanner.rs  threads.rs  util.rs
src/id/: devices.rs  display.rs  elements.rs  mod.rs
