[package]
name = "printer-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
reqwest = "0.11.13"
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
thiserror = "1.0.38"
ipnet = "2.7.1"
indicatif = "0.17.3"